--- a/css/style-main.css
+++ b/css/style-main.css
@@ -42,11 +42,11 @@ h2 {
   -moz-box-shadow: 11px 10px 21px -1px rgba(41, 40, 40, 0.65);
 }
 
-@media (min-width: 380px) {
+/* @media (min-width: 380px) {
   .main-card {
     transform: translateX(-425px);
   }
-}
+} */
 
 .sign-up-title {
   padding: 10px;
